2006-02-12  Dalibor Topic  <robilad@kaffe.org>

	Fixes PR 26218.

	* gnu/java/net/protocol/file/Connection.java (unquote):
	Convert Unicode characters outside basic plane to UTF-8,
	rather than throwing an exception.

2006-02-12  Tom Tromey  <tromey@redhat.com>

	* javax/sound/sampled/LineEvent.java (readObject): New method.
	(writeObject): Likewise.
	(serialVersionUID): New field.

2006-02-12  Mark Wielaard  <mark@klomp.org>

	* java/beans/PropertyChangeSupport.java (addPropertyChangeListener):
	Silently ignores null listener.
	(addPropertyChangeListener(String, PropertyChangeListener): Likewise.
	(getPropertyChangeListeners): Returns empty PropertyChangeListener
	array for null propertyName.

2006-02-12  Wolfgang Baer  <WBaer@gmx.de>

	* java/rmi/MarshalledObject.java: Added api docs to the class.
	* java/rmi/Remote.java: Added interface api docs.
	* java/rmi/package.html: Added package description.
	* java/rmi/AccessException.java: Minor api doc fixes.
	* java/rmi/NoSuchObjectException.java: Likewise.
	* java/rmi/AlreadyBoundException.java: Likewise.
	* java/rmi/RemoteException.java: Likewise.
	* java/rmi/NotBoundException.java: Likewise.
	* java/rmi/RMISecurityException.java: Likewise.
	* java/rmi/StubNotFoundException.java: Likewise.	

2006-02-12  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (postKeyEvent): Call
	q() to get EventQueue.
	* gnu/java/awt/peer/gtk/GtkGenericPeer.java (q): Remove static field.
	(enableQueue): Remove static method.
	* gnu/java/awt/peer/gtk/GtkToolkit.java (getSystemEventQueueImpl):
	Don't call GtkGenericPeer.enableQueue().

2006-02-12  Wolfgang Baer  <WBaer@gmx.de>

	* java/rmi/MarshalledObject.java: Reformatted.
	* java/rmi/Naming.java: Likewise.	

2006-02-12  Jeroen Frijters  <jeroen@frijters.net>

	* java/io/InputStream.java
	(read(byte[],int,int)): Changed argument validation to prevent
	integer overflow. Remove redundant check.

2006-02-12  Jeroen Frijters  <jeroen@frijters.net>
